# poetry-vscode-template

./: .editorconfig  .gitignore  README.md  pyproject.toml
tests/: test_my_template.py
