[tool.poetry]
name = "my-template"
version = "0.1.0"
description = ""
authors = ["kamuiroeru <19339328+kamuiroeru@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pynvim = "^0.4.3"
jedi = "^0.18.1"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# black のフォーマット設定
[tool.black]
line-length = 120
target-version = ['py310']  # Pythonのバージョン
include = '\.py$'  # 対象ファイル
skip-string-normalization = true  # ''を""に変換しない設定
